--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,3 @@
-<h1>Show</h1>
+<h1>Show page</h1>
 <p><strong>Text: </strong><%= @article.title %></p>
 <p><strong>Description: </strong><%=@article.description %></p>
