add layout links

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,4 @@
-<h1>This is About us</h1>
+<h1>This is About page</h1>
+
+<%= link_to 'List of articles', articles_path %> |
+<%= link_to 'Home', root_path %>
