--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,7 @@
-<h1>Hello Emmanuel!</h1>
+<h1>Welcome to home page</h1>
+
+<%= link_to 'List of articles', articles_path %> |
+<%= link_to 'About', about_path %>
+
+
+
