--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
 <tr>
 <th>Text</th>
 <th>Description</th>
-<th>Actions
+<th colspan = 3 >Actions
 </th>
 </tr>
 </thead>
@@ -15,9 +15,14 @@
 <td><%= article.title %></td>
 <td><%= article.description %></td> 
 <td><%= link_to 'Show', article_path(article) %></td>
-<td><%= link_to "Delete", article_path(article), method: :delete, data: { turbo_method: :delete } %></td>
+<td><%= link_to 'Edit', edit_article_path(article) %></td>
+<td><%= link_to "Delete", article_path(article), data: { turbo_method: :delete, turbo_confirm: "Are you sure?"} %></td>
 </tr>
 <% end %>
 </tbody>
 </table>
+
+<p><%= link_to 'Create new article', new_article_path %></p>
+
+
 
