--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -22,7 +22,7 @@
 </tbody>
 </table>
 
-<p><%= link_to 'Create new article', new_article_path %></p>
+<p><%= link_to 'Create new article', new_article_path %> | <%= link_to 'Home', root_path %></p>
 
 
 
