add more layout links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <h1>Welcome to home page</h1>
 
 <%= link_to 'List of articles', articles_path %> |
+<%= link_to 'Create new article', new_article_path %> |
 <%= link_to 'About', about_path %>
 
 
