--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,4 +3,5 @@
 <p><strong>Description: </strong><%=@article.description %></p>
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Delete', article_path(@article), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %> |
-<%= link_to 'Back to list', articles_path %>
+<%= link_to 'Back to list', articles_path %> |
+<%= link_to 'Home', root_path%>
